--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "causeways_live" "\0"
+            VALUE "FileDescription", "flutter_learn_downloader" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "causeways_live" "\0"
+            VALUE "InternalName", "flutter_learn_downloader" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "causeways_live.exe" "\0"
-            VALUE "ProductName", "causeways_live" "\0"
+            VALUE "OriginalFilename", "flutter_learn_downloader.exe" "\0"
+            VALUE "ProductName", "flutter_learn_downloader" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
