--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: causeways_live
-description: Checkpoints Camera App.
+name: flutter_learn_downloader
+description: Flutter downloader.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -56,7 +56,6 @@ dev_dependencies:
   firebase_analytics: ^9.1.3
   extended_nested_scroll_view: ^5.0.0
   intl: ^0.17.0
-  flutter_cors: ^1.3.2
   
 flutter_icons:
   android: "launcher_icon"
