--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.14)
-project(causeways_live LANGUAGES CXX)
+project(flutter_learn_downloader LANGUAGES CXX)
 
-set(BINARY_NAME "causeways_live")
+set(BINARY_NAME "flutter_learn_downloader")
 
 cmake_policy(SET CMP0063 NEW)
 
